--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,85 @@
-/* Sets all the text color to red! */
-body {
-    color: red;
+.metronome-metronome {
+    border-radius: 0.25rem;
+    animation: metronome-pulse var(--metronome-duration) infinite;
+    margin: 15px 0;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 0.15rem;
+}
+
+/* Sizes: ["small" (default), "medium", "large"] */
+.metronome-metronome[data-size="medium"] {
+    height: 4rem;
+    align-items: flex-end;
+}
+
+.metronome-metronome[data-size="large"] {
+    height: 15rem;
+    align-items: flex-end;
+    padding: 0.5rem;
+}
+
+.metronome-metronome button {
+    /* Reset button styles */
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    outline: 0 !important;
+    box-shadow: none !important;
+    border-radius: 0;
+}
+
+.metronome-metronome .sound-toggle {
+    opacity: 0.5;
+    border-radius: 0.2rem;
+    height: 1.25rem;
+    width: 1.25rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.metronome-metronome .sound-toggle div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.metronome-description {
+    font-weight: bold;
+    margin-right: auto;
+    font-size: 0.68rem;
+    padding:0 0.25rem;
+    opacity: 0.5;
+}
+
+.metronome-metronome[data-size="medium"] .metronome-description,
+.metronome-metronome[data-size="large"] .metronome-description {
+    padding: 0;
+}
+
+
+.metronome-metronome .sound-toggle:hover,
+.metronome-metronome .sound-toggle:active {
+    background: rgb(100 100 100 / 30%);
+}
+
+.metronome-metronome .sound-toggle:hover,
+.metronome-metronome .sound-toggle:active,
+.metronome-metronome .sound-toggle.enabled {
+    opacity: 1;
+}
+
+@keyframes metronome-pulse {
+    0% {
+        background: var(--tick-color);
+    }
+
+    100% {
+        background: rgb(0 0 0 / 10%);
+    }
 }
