--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,27 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 0.15rem;
+    padding: 0.25rem;
+    font-size: 0.68rem;
 }
 
 /* Sizes: ["small" (default), "medium", "large"] */
 .metronome-metronome[data-size="medium"] {
     height: 4rem;
     align-items: flex-end;
+    font-size: 0.8rem;
 }
 
 .metronome-metronome[data-size="large"] {
     height: 15rem;
     align-items: flex-end;
-    padding: 0.5rem;
+    font-size: 0.8rem;
+}
+
+.metronome-metronome .metronome-content {
+    display: flex;
+    align-items: center;
+    width: 100%;
 }
 
 .metronome-metronome button {
@@ -30,48 +38,61 @@
     cursor: pointer;
     outline: 0 !important;
     box-shadow: none !important;
-    border-radius: 0;
-}
-
-.metronome-metronome .sound-toggle {
-    opacity: 0.5;
     border-radius: 0.2rem;
-    height: 1.25rem;
+    opacity: 0.5;
     width: 1.25rem;
+    height: 1.25rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.metronome-metronome .sound-toggle div {
+.metronome-metronome[data-size="medium"] button,
+.metronome-metronome[data-size="large"] button {
+    width: 2rem;
+    height: 2rem;
+    padding: 0.25rem;
+}
+
+.metronome-metronome button > * {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+.metronome-metronome button:hover,
+.metronome-metronome button:active {
+    background: rgb(100 100 100 / 30%);
+}
+
+.metronome-metronome button:hover,
+.metronome-metronome button:active,
+.metronome-metronome button.enabled {
+    opacity: 1;
 }
 
 .metronome-description {
     font-weight: bold;
     margin-right: auto;
-    font-size: 0.68rem;
     padding:0 0.25rem;
     opacity: 0.5;
 }
 
-.metronome-metronome[data-size="medium"] .metronome-description,
-.metronome-metronome[data-size="large"] .metronome-description {
-    padding: 0;
+.metronome-metronome .pendulum {
+    animation: pendulum-swing calc(var(--metronome-duration) * 2) calc(var(--metronome-duration) / 2) infinite ease-in-out;
+    transform-origin: bottom;
+    transform-box: fill-box;
 }
 
+@keyframes pendulum-swing {
+    0%, 100% {
+        transform: rotate(-30deg)
+    }
 
-.metronome-metronome .sound-toggle:hover,
-.metronome-metronome .sound-toggle:active {
-    background: rgb(100 100 100 / 30%);
-}
-
-.metronome-metronome .sound-toggle:hover,
-.metronome-metronome .sound-toggle:active,
-.metronome-metronome .sound-toggle.enabled {
-    opacity: 1;
+    50% {
+        transform: rotate(30deg)
+    }
 }
 
 @keyframes metronome-pulse {
@@ -80,6 +101,12 @@
     }
 
     100% {
-        background: rgb(0 0 0 / 10%);
+        background: var(--scrollbar-bg);
     }
 }
+
+
+
+/* v-tooltip */
+
+.resize-observer[data-v-b329ee4c]{position:absolute;top:0;left:0;z-index:-1;width:100%;height:100%;border:none;background-color:transparent;pointer-events:none;display:block;overflow:hidden;opacity:0}.resize-observer[data-v-b329ee4c] object{display:block;position:absolute;top:0;left:0;height:100%;width:100%;overflow:hidden;pointer-events:none;z-index:-1}.v-popper--theme-dropdown .v-popper__inner{background:#fff;color:#000;padding:24px;border-radius:6px;box-shadow:0 6px 30px rgba(0,0,0,.1)}.v-popper--theme-dropdown .v-popper__arrow{border-color:#fff}.v-popper__popper{z-index:10000}.v-popper__popper.v-popper__popper--hidden{visibility:hidden;opacity:0;transition:opacity .15s,visibility .15s}.v-popper__popper.v-popper__popper--shown{visibility:visible;opacity:1;transition:opacity .15s}.v-popper__popper.v-popper__popper--skip-transition,.v-popper__popper.v-popper__popper--skip-transition>.v-popper__wrapper{transition:none!important}.v-popper__inner{position:relative}.v-popper__arrow-container{width:10px;height:10px}.v-popper__arrow{border-style:solid;position:relative;width:0;height:0}.v-popper__popper[data-popper-placement^=top] .v-popper__arrow{border-width:5px 5px 0 5px;border-left-color:transparent!important;border-right-color:transparent!important;border-bottom-color:transparent!important}.v-popper__popper[data-popper-placement^=bottom] .v-popper__arrow-container{top:0}.v-popper__popper[data-popper-placement^=bottom] .v-popper__arrow{border-width:0 5px 5px 5px;border-left-color:transparent!important;border-right-color:transparent!important;border-top-color:transparent!important;top:-5px}.v-popper__popper[data-popper-placement^=right] .v-popper__arrow{border-width:5px 5px 5px 0;border-left-color:transparent!important;border-top-color:transparent!important;border-bottom-color:transparent!important;left:-5px}.v-popper__popper[data-popper-placement^=left] .v-popper__arrow-container{right:-5px}.v-popper__popper[data-popper-placement^=left] .v-popper__arrow{border-width:5px 0 5px 5px;border-top-color:transparent!important;border-right-color:transparent!important;border-bottom-color:transparent!important;right:-5px}.v-popper{width:max-content}.v-popper--theme-tooltip .v-popper__inner{background:rgba(0,0,0,.5);backdrop-filter:blur(5px);color:#fff;font-size:.75rem;border-radius:6px;padding:4px 8px}.v-popper--theme-tooltip .v-popper__arrow{border-color:rgba(0,0,0,.5)}
